--- a/spring-mvc/src/main/webapp/WEB-INF/views/index.html
+++ b/spring-mvc/src/main/webapp/WEB-INF/views/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Index page</title>
 
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 </head>
 <body>
 <h1 th:text="${message}"></h1>
@@ -14,6 +14,7 @@
     </div>
 </div>
 
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script type="application/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script type="application/javascript" th:src="@{/static/js/test.js}"></script>
 </body>
 </html>
